Ensure headings are fully visible
when using page URL with anchor

--- a/_sass/custom/_post.scss
+++ b/_sass/custom/_post.scss
@@ -24,18 +24,21 @@
   margin-bottom: $spacing-unit;
   h2 {
     font-size: 32px;
+    scroll-margin-top: 80px;
     @media (max-width: $screen-md-min) {
       font-size: 28px;
     }
   }
   h3 {
     font-size: 26px;
+    scroll-margin-top: 80px;
     @media (max-width: $screen-md-min) {
       font-size: 22px;
     }
   }
   h4 {
     font-size: 20px;
+    scroll-margin-top: 75px;
     @media (max-width: $screen-md-min) {
       font-size: 18px;
     }
